generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

model User {
  id        String   @id @default(dbgenerated("uuid_generate_v7()")) @map("id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)

  // Domain-Specific Fields.
  name             String @map("name") @db.VarChar(255)
  email            String @unique @map("email")
  googleProviderId String @unique @map("google_provider_id")
  avatarURL        String @map("avatar_url")

  // Relations.
  userProfile      UserProfile?
  learningJourneys LearningJourney[]
  threads          Thread[]
  sentiments       LearningUnitSentiments[]

  @@map("users")
}

model UserProfile {
  userId            String             @id @map("user_id") @db.Uuid
  createdAt         DateTime           @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt         DateTime           @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)
  learningFrequency LearningFrequency? @map("learning_frequency")
  isSubscribed      Boolean            @default(false) @map("is_subscribed")

  // Relations.
  user      User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  interests UserInterest[]

  @@map("user_profiles")
}

model Collection {
  id        String   @id @default(dbgenerated("uuid_generate_v7()")) @map("id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)

  // Domain-Specific Fields.
  title       String  @map("title")
  description String  @map("description")
  tagId       String? @map("tag_id") @db.Uuid
  isTopic     Boolean @default(false) @map("is_topic")

  // Relations.
  learningUnits LearningUnitCollection[]
  userInterests UserInterest[]
  tag           Tag?                     @relation(fields: [tagId], references: [id])

  @@map("collections")
}

model LearningUnit {
  id        String   @id @default(dbgenerated("uuid_generate_v7()")) @map("id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)

  // Domain-Specific Fields.
  title         String             @map("title")
  summary       String             @map("summary")
  objectives    String             @map("objectives")
  createdBy     String             @map("created_by")
  isRecommended Boolean            @default(false) @map("is_recommended")
  isRequired    Boolean            @default(false) @map("is_required")
  status        LearningUnitStatus @default(DRAFT) @map("status")
  dueDate       DateTime?          @map("due_date") @db.Date

  // Relations.
  collections      LearningUnitCollection[]
  sentiments       LearningUnitSentiments[]
  tags             LearningUnitTag[]
  learningJourneys LearningJourney[]
  questionAnswers  QuestionAnswer[]
  sources          LearningUnitSources[]
  contentItems     LearningUnitContent[]

  @@map("learning_units")
}

model LearningUnitContent {
  id        String      @id @default(dbgenerated("uuid_generate_v7()")) @db.Uuid
  unitId    String      @map("unit_id") @db.Uuid
  type      ContentType @map("type")
  url       String?     @map("url")
  createdAt DateTime    @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt DateTime    @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)

  unit        LearningUnit                @relation(fields: [unitId], references: [id], onDelete: Cascade)
  checkpoints LearningJourneyCheckpoint[]

  @@map("learning_unit_content")
}

model LearningUnitCollection {
  // Relations.
  learningUnitId String @map("learning_unit_id") @db.Uuid
  collectionId   String @map("collection_id") @db.Uuid

  learningUnit LearningUnit @relation(fields: [learningUnitId], references: [id], onDelete: Cascade)
  collection   Collection   @relation(fields: [collectionId], references: [id], onDelete: Cascade)

  @@id([learningUnitId, collectionId])
  @@map("learning_unit_collections")
}

model LearningUnitSentiments {
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)

  // Domain-Specific Fields.
  hasLiked Boolean @map("has_liked")

  // Relations.
  userId         String @map("user_id") @db.Uuid
  learningUnitId String @map("learning_unit_id") @db.Uuid

  user         User         @relation(fields: [userId], references: [id])
  learningUnit LearningUnit @relation(fields: [learningUnitId], references: [id])

  @@unique([userId, learningUnitId])
  @@map("learning_unit_sentiments")
}

model LearningUnitSources {
  id        String   @id @default(dbgenerated("uuid_generate_v7()")) @map("id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)

  // Domain-Specific Fields.
  title     String @map("title")
  sourceURL String @map("source_url")

  // Relations.
  learningUnitId String @map("learning_unit_id") @db.Uuid

  learningUnit LearningUnit             @relation(fields: [learningUnitId], references: [id])
  tags         LearningUnitSourcesTag[]

  @@map("learning_unit_sources")
}

enum ContentType {
  PODCAST
  QUIZ
  VIDEO
}

enum LearningUnitStatus {
  DRAFT
  PUBLISHED
}

model LearningJourney {
  id        String   @id @default(dbgenerated("uuid_generate_v7()")) @map("id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)

  // Domain-Specific Fields.
  isCompleted     Boolean  @default(false) @map("is_completed")
  isQuizAttempted Boolean  @default(false) @map("is_quiz_attempted")
  isQuizPassed    Boolean? @map("is_quiz_passed")

  // Relations.
  userId         String @map("user_id") @db.Uuid
  learningUnitId String @map("learning_unit_id") @db.Uuid

  user         User         @relation(fields: [userId], references: [id])
  learningUnit LearningUnit @relation(fields: [learningUnitId], references: [id])

  checkpoints LearningJourneyCheckpoint[]

  @@unique([userId, learningUnitId])
  @@map("learning_journeys")
}

model LearningJourneyCheckpoint {
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)

  // Domain-Specific Fields.
  lastCheckpoint Decimal @map("last_checkpoint")

  // Relations.
  learningJourneyId String @map("learning_journey_id") @db.Uuid
  contentItemId     String @map("content_item_id") @db.Uuid

  learningJourney LearningJourney     @relation(fields: [learningJourneyId], references: [id], onDelete: Cascade)
  contentItem     LearningUnitContent @relation(fields: [contentItemId], references: [id], onDelete: Cascade)

  @@id([learningJourneyId, contentItemId])
  @@map("learning_journey_checkpoints")
}

model Tag {
  id        String   @id @default(dbgenerated("uuid_generate_v7()")) @map("id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)

  // Domain-Specific Fields.
  code  String @unique @map("code") @db.VarChar(32) // e.g. "SPECIAL_EDUCATIONAL_NEEDS"
  label String @map("label") @db.VarChar(100) // e.g. "Special Educational Needs"

  // Relations.
  learningUnits       LearningUnitTag[]
  LearningUnitSources LearningUnitSourcesTag[]
  collections         Collection[]

  @@map("tags")
}

model LearningUnitTag {
  // Relations.
  learningUnitId String @map("learning_unit_id") @db.Uuid
  tagId          String @map("tag_id") @db.Uuid

  learningUnit LearningUnit @relation(fields: [learningUnitId], references: [id], onDelete: Cascade)
  tag          Tag          @relation(fields: [tagId], references: [id], onDelete: Cascade)

  @@id([learningUnitId, tagId])
  @@map("learning_unit_tags")
}

model LearningUnitSourcesTag {
  // Relations.
  learningUnitSourceId String @map("learning_unit_source_id") @db.Uuid
  tagId                String @map("tag_id") @db.Uuid

  learningUnitSource LearningUnitSources @relation(fields: [learningUnitSourceId], references: [id], onDelete: Cascade)
  tag                Tag                 @relation(fields: [tagId], references: [id], onDelete: Cascade)

  @@id([learningUnitSourceId, tagId])
  @@map("learning_unit_sources_tags")
}

model Thread {
  id        String   @id @default(dbgenerated("uuid_generate_v7()")) @map("id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)

  // Domain-Specific Fields.
  isActive Boolean @default(false) @map("is_active")

  // Relations.
  userId String @map("user_id") @db.Uuid

  user User @relation(fields: [userId], references: [id])

  messages Message[]

  @@map("threads")
}

model Message {
  id        String   @id @default(dbgenerated("uuid_generate_v7()")) @map("id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)

  // Domain-Specific Fields.
  content String @map("content")
  role    Role   @map("role")

  // Relations.
  threadId String @map("thread_id") @db.Uuid

  thread Thread @relation(fields: [threadId], references: [id])

  @@map("messages")
}

enum Role {
  USER
  ASSISTANT
}

model QuestionAnswer {
  id        String   @id @default(dbgenerated("uuid_generate_v7()")) @map("id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)

  // Domain-Specific Fields.
  question    String   @map("question")
  options     String[] @default([]) @map("options")
  answer      Int      @map("answer") @db.SmallInt
  explanation String   @map("explanation")
  order       Int      @map("order") @db.SmallInt

  // Relations.
  learningUnitId String @map("learning_unit_id") @db.Uuid

  learningUnit LearningUnit @relation(fields: [learningUnitId], references: [id])

  @@map("question_answers")
}

enum LearningFrequency {
  QUICK
  REGULAR
  DEEPDIVE
}

model UserInterest {
  userId       String   @map("user_id") @db.Uuid
  collectionId String   @map("collection_id") @db.Uuid
  createdAt    DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt    DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)

  // Relations.
  userProfile UserProfile @relation(fields: [userId], references: [userId], onDelete: Cascade)
  collection  Collection  @relation(fields: [collectionId], references: [id], onDelete: Cascade)

  @@id([userId, collectionId])
  @@map("user_interests")
}

model UserAdmin {
  id        String   @id @default(dbgenerated("uuid_generate_v7()")) @map("id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(3)
  updatedAt DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(3)

  // Domain-Specific Fields.
  name             String  @map("name") @db.VarChar(255)
  email            String  @unique @map("email")
  googleProviderId String  @unique @map("google_provider_id")
  isActive         Boolean @default(true) @map("is_active")

  @@map("user_admins")
}
